--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -51,7 +51,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы об антицеллюлитном массаже',
+        title: 'Отзывы об&nbsp;антицеллюлитном массаже',
         reviews: [
           {
             id: 13,
