--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -50,7 +50,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы об антицеллюлитном массаже',
+        title: 'Отзывы о&nbsp;лимфодренажном массаже',
         reviews: [
           {
             id: 19,
