--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -48,7 +48,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о спортивном массаже',
+        title: 'Отзывы о&nbsp;массаже лица',
         reviews: [
           {
             id: 22,
