--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -47,7 +47,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о спортивном массаже',
+        title: 'Отзывы о&nbsp;массаже лица',
         reviews: [
           {
             id: 25,
