--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -53,7 +53,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о спортивном массаже',
+        title: 'Отзывы о&nbsp;ручном моделировании фигуры',
         reviews: [
           {
             id: 31,
