--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -58,7 +58,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о нас',
+        title: 'Отзывы о&nbsp;нас',
         showFactoid: true,
         reviews: [
           {
