--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -50,7 +50,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о массаже лица',
+        title: 'Отзывы о&nbsp;массаже лица',
         reviews: [
           {
             id: 10,
