--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -49,7 +49,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о массаже шейно-воротниковой зоны',
+        title: 'Отзывы о&nbsp;массаже шейно-воротниковой зоны',
         reviews: [
           {
             id: 7,
