--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -54,7 +54,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о спортивном массаже',
+        title: 'Отзывы о&nbsp;спортивном массаже',
         reviews: [
           {
             id: 1,
