--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -54,7 +54,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о нас',
+        title: 'Отзывы о&nbsp;нас',
         showFactoid: true,
         reviews: [
           {
