--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -53,7 +53,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о спортивном массаже',
+        title: 'Отзывы об&nbsp;общем массаже',
         reviews: [
           {
             id: 34,
