--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -51,7 +51,7 @@ block variables
         ]
       },
       reviewsBlock: {
-        title: 'Отзывы о массаже лица',
+        title: 'Отзывы о&nbsp;массаже лица',
         reviews: [
           {
             id: 4,
