--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -59,7 +59,7 @@ block variables
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;нас',
-        showFactoid: true,
+        showSticker: true,
         reviews: [
           {
             id: 45,
@@ -117,5 +117,6 @@ block content
   include ../includes/modules/content/application-form
   include ../includes/modules/content/features-list
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-types
 
 block script
