--- a/src/assets/scss/blocks/reusable/accordion.scss
+++ b/src/assets/scss/blocks/reusable/accordion.scss
@@ -14,13 +14,16 @@
 
   &__body {
     overflow: hidden;
+
+    transition-property: max-height;
+    transition-duration: 0.6s;
   }
 
   &[data-state='closed'] .accordion__body {
-    height: 0;
+    max-height: 0;
   }
 
   &[data-state='opened'] .accordion__body {
-    height: auto;
+    max-height: 100%;
   }
 }
