--- a/src/assets/scss/blocks/reusable/heading.scss
+++ b/src/assets/scss/blocks/reusable/heading.scss
@@ -36,3 +36,15 @@
     font-size: 3.6rem;
   }
 }
+
+@media (min-width: $l-desktop-min-width) {
+  .heading {
+    font-size: 3.8rem;
+  }
+}
+
+@media (min-width: $xl-desktop-min-width) {
+  .heading {
+    font-size: 4rem;
+  }
+}
