Markup and style of block with test description with wrong image

--- a/src/assets/scss/blocks/massage-types/massage-types.scss
+++ b/src/assets/scss/blocks/massage-types/massage-types.scss
@@ -246,6 +246,8 @@
 
 @media (min-width: $s-desktop-min-width) {
   .massage-types {
+    margin-bottom: 9rem;
+
     &__title {
       margin-bottom: 3.5rem;
     }
