--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -118,5 +118,6 @@ block content
   include ../includes/modules/content/features-list
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-types
+  include ../includes/modules/content/massage-choosing-quiz
 
 block script
