--- a/src/pug/includes/modules/content/application-form.pug
+++ b/src/pug/includes/modules/content/application-form.pug
@@ -3,8 +3,8 @@ section.application-form
     .application-form__content
       h2.application-form__title.heading.heading_secondary Оставьте заявку и получите скидку 20% на первый сеанс
       p.application-form__text
-        | Вы увидите, как работает массажист, получите профессиональную консультацию и&nbsp;сможете определиться
-        | с&nbsp;планом лечения. Если вам не&nbsp;понравится, мы вернём деньги за&nbsp;сеанс
+        | Вы увидите, как работает специалист, получите профессиональную консультацию и&nbsp;сможете определиться
+        | с&nbsp;планом процедур. Если вам не&nbsp;понравится, мы вернём деньги за&nbsp;сеанс
       form.application-form__form(action='#' method='post')
         input.application-form__input(name='name' type='text' placeholder='Имя' aria-label='Имя')
         input.application-form__input(name='phone' type='text' placeholder='Телефон' aria-label='Телефон')
