--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -58,5 +58,6 @@ html(lang='ru')
         block content
       .page__footer
         include ../includes/modules/footer/footer
+      include ../includes/popups/popups-wrap
 
     block script
