--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -16,6 +16,7 @@
 @use 'blocks/reusable/button';
 @use 'blocks/reusable/container';
 @use 'blocks/reusable/custom-checkbox';
+@use 'blocks/reusable/custom-radio';
 @use 'blocks/reusable/dropdown';
 @use 'blocks/reusable/heading';
 @use 'blocks/reusable/inline-icon';
@@ -30,8 +31,15 @@
 @use 'blocks/reusable/tooltip';
 @use 'blocks/reusable/underline';
 
+// Common page styles
 @use 'blocks/page/page';
 
+// Popups
+@use 'blocks/popups/popups-wrap';
+@use 'blocks/popups/popup';
+@use 'blocks/popups/popup-massage-test';
+
+// Different blocks
 @use 'blocks/header/page-header';
 @use 'blocks/header/phones-list';
 @use 'blocks/header/main-screen';
@@ -51,6 +59,9 @@
 @use 'blocks/massage-types/massage-types';
 @use 'blocks/massage-types/massage-card';
 
-@use 'blocks/massage-choosing-quiz/massage-choosing-quiz';
+@use 'blocks/massage-choosing-test/massage-choosing-test';
+@use 'blocks/massage-choosing-test/test-progress';
+@use 'blocks/massage-choosing-test/test-slide';
+@use 'blocks/massage-choosing-test/test-success';
 
 @use 'blocks/footer/page-footer';
